--- a/index.html
+++ b/index.html
@@ -4,25 +4,20 @@ layout: default
 ---
 <div class="jumbotron masthead">
   <div class="container">
-    <h1>Project Title</h1>
-
-    <p>Short Description.</p>
+    <h2>Clojure Workshop</h2>
+    <img src="/assets/images/lambda_logo_white.png" />
+    <p>2-day intensive Clojure Crash Course</p>
+    <p class="small">Munich, Germany</p>
     <p>
-      <a class='btn btn-primary btn-large' href='/articles/getting_started.html'>Get Started! »</a>
+      <a class='btn btn-primary btn-large' href='/articles/getting_started.html'>Register</a>
     </p>
 
     <ul class="masthead-links">
       <li>
-        <a href="/articles/guides.html">Read doc guides »</a>
+        <a href="http://twitter.com/defmunich">Follow us on Twitter</a>
       </li>
       <li>
-        <a href='TBA'>Join the mailing list »</a>
-      </li>
-      <li>
-        <a href='https://github.com/clojurewerkz/TBA'>Contribute »</a>
-      </li>
-      <li>
-        <a href='https://clojars.org/clojurewerkz/TBA'>Current Version - TBA</a>
+        <a href="http://www.meetup.com/Munich-Lambda/">Join Meetup Group</a>
       </li>
     </ul>
   </div>
