--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@ layout: default
       <li>
         <a href="http://www.meetup.com/Munich-Lambda/">Join Meetup Group</a>
       </li>
+      <li>
+        <a href="mailto:alex@clojurewerkz.org">Contact us</a>
+      </li>
+      <li>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://clojureworkshop.com" data-text="2-day Clojure Crash Course in Munich 12-13 October" data-via="defmunich" data-hashtags="clojureworkshop" data-dnt="true">Tweet</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      </li>
     </ul>
   </div>
 </div>
@@ -145,12 +152,5 @@ layout: default
       </div>
     </div>
 
-    <div class="row">
-      <div class="span4"></div>
-      <div class="span8" id="schedule">
-        <h2>Schedule</h2>
-      </div>
-    </div>
   </div>
-</div>
 </div>
