--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
         <a href="http://www.meetup.com/Munich-Lambda/">Join Meetup Group</a>
       </li>
       <li>
-        <a href="mailto:alex@clojurewerkz.org">Contact us</a>
+        <a href="mailto:info@clojureworkshop.com">Contact us</a>
       </li>
       <li>
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://clojureworkshop.com" data-text="2-day Clojure Crash Course in Munich 12-13 October" data-via="defmunich" data-hashtags="clojureworkshop" data-dnt="true">Tweet</a>
@@ -54,6 +54,8 @@ layout: default
         <h2>Sponsors</h2>
         <a href="http://codecentric.de/"><img class="sponsor-logo" src="/assets/images/codecentric.png" /></a>
         <a href="http://soundcloud.com/"><img class="sponsor-logo" src="/assets/images/soundcloud.png" /></a>
+        <br />
+        Want to become one? Ping us at <a href="mailto:sponsors@clojureworkshop.com">sponsors@clojureworkshop.com</a>
       </div>
       <div class="span8">
         <h2>Speakers/Coaches</h2>
@@ -102,6 +104,18 @@ layout: default
             bits of Clojure, Ruby or Haskell. When offline, he can be found
             outdoors; either preparing for the next marathon or wandering with a way
             too big backpack somewhere in the Alpine or Carpathian wilderness.
+          </div>
+        </div>
+
+        <div class="media">
+          <a class="pull-left" href="#">
+            <img class="media-object" src="https://secure.gravatar.com/avatar/a897b36b388796219fe140ad31101ce9.png ?s=60">
+          </a>
+          <div class="media-body">
+            <h4 class="media-heading">Marek Kubica</h4>
+            Programming language wanderer, functional programming proponent,
+            addicted to free software. Purveyor of fine rants. Uses computers and
+            wears hats.
           </div>
         </div>
 
