Added GitHub logo as sponsor

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ layout: default
         <h2>Sponsors</h2>
         <a href="http://codecentric.de/"><img class="sponsor-logo" src="/assets/images/codecentric.png" /></a>
         <a href="http://soundcloud.com/"><img class="sponsor-logo" src="/assets/images/soundcloud.png" /></a>
+        <a href="http://github.com/"><img class="sponsor-logo" src="/assets/images/github.png" /></a>
         <br />
         Want to become one? Ping us at <a href="mailto:sponsors@clojureworkshop.com">sponsors@clojureworkshop.com</a>
       </div>
