--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ layout: default
     <div class="row">
       <div class="span4 centered">
         <h2>Sponsors</h2>
-        <a href="http://codecentric.de/"><img class="sponsor-logo" src="/assets/images/codecentric.png" /></a>
-        <a href="http://soundcloud.com/"><img class="sponsor-logo" src="/assets/images/soundcloud.png" /></a>
-        <a href="http://github.com/"><img class="sponsor-logo" src="/assets/images/github.png" /></a>
+        <a href="https://codecentric.de/"><img class="sponsor-logo" src="/assets/images/codecentric.png" /></a>
+        <a href="https://soundcloud.com/"><img class="sponsor-logo" src="/assets/images/soundcloud.png" /></a>
+        <a href="https://github.com/"><img class="sponsor-logo" src="/assets/images/github.png" /></a>
         <br />
         Want to become one? Ping us at <a href="mailto:sponsors@clojureworkshop.com">sponsors@clojureworkshop.com</a>
       </div>
