--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ layout: default
         <a href="https://codecentric.de/"><img class="sponsor-logo" src="/assets/images/codecentric.png" /></a>
         <a href="https://soundcloud.com/"><img class="sponsor-logo" src="/assets/images/soundcloud.png" /></a>
         <a href="https://github.com/"><img class="sponsor-logo" src="/assets/images/github.png" /></a>
+        <a href="http://pragprog.com/"><img class="sponsor-logo" src="/assets/images/pragprog.png" /></a>
         <br />
         Want to become one? Ping us at <a href="mailto:sponsors@clojureworkshop.com">sponsors@clojureworkshop.com</a>
       </div>
