O'Reilly is sponsoring us
The german branch of O'Reilly agreed to sponsor our workshop. They asked
to be added to the list of sponsors in return which I am happily doing.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ layout: default
         <a href="https://soundcloud.com/"><img class="sponsor-logo" src="/assets/images/soundcloud.png" /></a>
         <a href="https://github.com/"><img class="sponsor-logo" src="/assets/images/github.png" /></a>
         <a href="http://pragprog.com/"><img class="sponsor-logo" src="/assets/images/pragprog.png" /></a>
+        <a href="http://www.oreilly.de/"><img class="sponsor-logo" src="/assets/images/oreilly.png" /></a>
         <br />
         Want to become one? Ping us at <a href="mailto:sponsors@clojureworkshop.com">sponsors@clojureworkshop.com</a>
       </div>
