New version of website

--- a/index.html
+++ b/index.html
@@ -2,55 +2,59 @@
 title: Clojure Workshop, 12-13 October, Munich.
 layout: default
 ---
-<div class="jumbotron masthead">
+<main class="bs-masthead" id="content" role="main" style="background: url(/assets/images/bg.jpg) center -300px no-repeat, #000; color: #fff !important; height: 600px; padding-top: 50px !important; padding-bottom: 50px !important;">
   <div class="container">
-    <h2>Clojure Workshop</h2>
-    <img src="/assets/images/lambda_logo_white.png" />
-    <p>2-day intensive Clojure Crash Course</p>
-    <p class="small">12-13 October, Munich, Germany</p>
-    <p>
-      <a class='btn btn-primary btn-large' href='http://www.meetup.com/Munich-Lambda/events/129479772/'>Register</a>
-    </p>
+    <center>
+      <h2>Clojure Workshop</h2>
+      <img src="/assets/images/lambda_logo_white.png" />
+      <p class="lead" style="margin-right: 0;">Affordable 2-day intensive Clojure Crash Course</p>
+      <h3>Munich, Berlin, Dusseldorf. Dates TBA on availability.</h3>
+      <p>
+        <a class='btn btn-primary btn-lg' href='http://www.meetup.com/defworkshop/events/143393772/'>Munich</a>
+        <a class='btn btn-primary btn-lg' href='http://www.meetup.com/defworkshop/events/143394332/'>Berlin</a>
+        <a class='btn btn-primary btn-lg' href='http://www.meetup.com/defworkshop/events/143394352/'>Düsseldorf</a>
+      </p>
 
-    <ul class="masthead-links">
-      <li>
-        <a href="http://twitter.com/defmunich">Follow us on Twitter</a>
-      </li>
-      <li>
-        <a href="http://www.meetup.com/Munich-Lambda/">Join Meetup Group</a>
-      </li>
-      <li>
-        <a href="mailto:info@clojureworkshop.com">Contact us</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://clojureworkshop.com" data-text="2-day Clojure Crash Course in Munich 12-13 October" data-via="defmunich" data-hashtags="clojureworkshop" data-dnt="true">Tweet</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-      </li>
-    </ul>
+      <ul class="bs-masthead-links" style="text-align: center;">
+        <li>
+          <a href="http://twitter.com/defmunich">Follow us on Twitter</a>
+        </li>
+        <li>
+          <a href="http://www.meetup.com/defworkshop/">Join Meetup Group</a>
+        </li>
+        <li>
+          <a href="mailto:info@clojureworkshop.com">Contact us</a>
+        </li>
+        <li>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://clojureworkshop.com" data-text="2-day Clojure Crash Course in Munich 12-13 October" data-via="defmunich" data-hashtags="clojureworkshop" data-dnt="true">Tweet</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        </li>
+      </ul>
+    </center>
   </div>
-</div>
+</main>
 
 <div class='container'>
   <div class="marketing">
     <div class="row">
-      <div class="span4">
+      <div class="col-lg-4">
         <h2>Core Concepts</h2>
         <p>Staring with basics of Clojure, we'll be building a solid foundation for you as a Clojure developer. You'll learn everything required to get you up and running with Clojure.</p>
       </div>
 
-      <div class="span4">
+      <div class="col-lg-4">
         <h2>Interactive</h2>
         <p>One of prerequisites is your own laptop. We support 3 text exitors: Emacs, Vim and Sublime, each one of those has nice interactive development tools. Pick one, get it configured, we'll cover the rest.</p>
       </div>
 
-      <div class="span4">
+      <div class="col-lg-4">
         <h2>Real-life examples</h2>
         <p>We'll have people with production experience with Clojure speaking and coaching. They'll share their experiences with language. Get your questions prepared, they'll be able to answer all of them!</p>
       </div>
     </div>
 
     <div class="row">
-      <div class="span4 centered">
+      <div class="col-lg-4 centered">
         <h2>Sponsors</h2>
         <a href="https://codecentric.de/"><img class="sponsor-logo" src="/assets/images/codecentric.png" /></a>
         <a href="https://soundcloud.com/"><img class="sponsor-logo" src="/assets/images/soundcloud.png" /></a>
@@ -60,8 +64,8 @@ layout: default
         <br />
         Want to become one? Ping us at <a href="mailto:sponsors@clojureworkshop.com">sponsors@clojureworkshop.com</a>
       </div>
-      <div class="span8">
-        <h2>Speakers/Coaches</h2>
+      <div class="col-lg-8">
+        <h2>Speakers/Coaches (Munich Edition)</h2>
 
         <div class="media">
           <a class="pull-left" href="#">
@@ -138,8 +142,8 @@ layout: default
 
 
     <div class="row">
-      <div class="span4"></div>
-      <div class="span8" id="topics">
+      <div class="col-lg-4"></div>
+      <div class="col-lg-8" id="topics">
         <h2>Topics</h2>
         <dl>
           <dt>Clojure Toolchain</dt>
@@ -168,6 +172,5 @@ layout: default
         </dl>
       </div>
     </div>
-
   </div>
 </div>
