Joseph won't be there

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ layout: default
       <div class="span4 centered">
         <h2>Sponsors</h2>
         <a href="https://codecentric.de/"><img class="sponsor-logo" src="/assets/images/codecentric.png" /></a>
+        <a href="https://stylefruits.de/"><img class="sponsor-logo" src="/assets/images/stylefruits.png" style="width: 270px;"/></a>
         <a href="https://soundcloud.com/"><img class="sponsor-logo" src="/assets/images/soundcloud.png" /></a>
         <a href="https://github.com/"><img class="sponsor-logo" src="/assets/images/github.png" /></a>
         <a href="http://pragprog.com/"><img class="sponsor-logo" src="/assets/images/pragprog.png" /></a>
@@ -62,17 +63,6 @@ layout: default
       </div>
       <div class="span8">
         <h2>Speakers/Coaches</h2>
-
-        <div class="media">
-          <a class="pull-left" href="#">
-            <img class="media-object" src="https://secure.gravatar.com/avatar/3c28deaff162aeda44f2e0bcdca1dacf?s=60">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">Joseph Wilk</h4>
-            Helping shape the future of Sound on the internet @ SoundCloud.
-            While on the side still toying with the dream of AI.
-          </div>
-        </div>
 
         <div class="media">
           <a class="pull-left" href="#">
@@ -169,5 +159,126 @@ layout: default
       </div>
     </div>
 
+    <div class="row">
+      <div class="span4"></div>
+      <div class="span8">
+        <h2>Schedule</h2>
+        <h2>Day 1 (12 October)</h2>
+
+        <table class="table table-striped">
+          <tr>
+            <td>09:00  -  09:45</td>
+            <td rowspan="2" style="vertical-align: middle;">
+              Introduction to Clojure (OP)
+            </td>
+          </tr>
+          <tr><td>09:45  -  10:30</td></tr>
+
+          <tr>
+            <td>10:30  -  10:45</td>
+            <td>Break</td>
+          </tr>
+
+          <tr>
+            <td>10:45  -  11:30</td>
+            <td rowspan="2" style="vertical-align: middle;">
+              Working With Collections (MKZ)
+            </td>
+          </tr>
+          <tr><td>11:30  -  12:15</td></tr>
+
+          <tr>
+            <td>12:15  -  13:45</td>
+            <td>Lunch Break</td>
+          </tr>
+
+          <tr>
+            <td>13:45  -  14:30</td>
+            <td rowspan="2" style="vertical-align: middle;">
+              State to recursion (MKZ)
+            </td>
+          </tr>
+          <tr><td>14:30  -  15:15</td></tr>
+
+          <tr>
+            <td>15:30  -  16:15</td>
+            <td rowspan="2" style="vertical-align: middle;">
+              Java Interoperability (JS)
+            </td>
+          </tr>
+          <tr><td>16:15  -  17:00</td></tr>
+
+        </table>
+
+
+
+        <h2>Day 2 (13 October)</h2>
+
+        <table class="table table-striped">
+          <tr>
+            <td>09:00  -  09:45</td>
+            <td rowspan="2" style="vertical-align: middle;">
+              Multimethods and Protocols (TN)
+            </td>
+          </tr>
+          <tr><td>09:45  -  10:30</td></tr>
+
+          <tr>
+            <td>10:30  -  10:45</td>
+            <td>Break</td>
+          </tr>
+
+          <tr>
+            <td>10:45  -  11:30</td>
+            <td>
+              Let over Lambda (MKC)
+            </td>
+          </tr>
+          <tr>
+            <td>10:45  -  11:30</td>
+            <td>
+              Destructuring (MKC)
+            </td>
+          </tr>
+
+          <tr>
+            <td>12:15  -  13:45</td>
+            <td>Lunch Break</td>
+          </tr>
+
+          <tr>
+            <td>13:45  -  14:30</td>
+            <td rowspan="2" style="vertical-align: middle;">
+              Concurrency and STM (OP)
+            </td>
+          </tr>
+          <tr><td>14:30  -  15:15</td></tr>
+
+          <tr>
+            <td>15:30  -  16:15</td>
+            <td rowspan="2" style="vertical-align: middle;">
+              Writing Macros (OP)
+            </td>
+          </tr>
+          <tr><td>16:15  -  17:00</td></tr>
+
+        </table>
+
+
+      </div>
+    </div>
+    <div class="row">
+      <div class="span4"></div>
+      <div class="span8" id="topics">
+        <h2>Sponsors</h2>
+        <a href="https://stylefruits.de/"><img class="sponsor-logo" src="/assets/images/stylefruits.png" style="width: 270px;"/></a>
+
+        <p>With over 5 million monthly visitors worldwide and roughly 4 million Facebook fans, stylefruits is the leading social shopping platform for fashion and interior design in Europe. Headquartered in Munich, Germany, stylefruits GmbH combines online shopping with innovative social media features.</p>
+
+        <p>The stylefruits website offers a wide range of interior design and fashion products by featuring items from online shops in the fashion and home segments. Thanks to intuitive design tools, stylefruits users can easily combine thousands of products to create trendy outfits and living styles, and then post these creations on the stylefruits website, Facebook, or other social media sites so that they can be rated and discussed before making a purchase. </p>
+
+        <p>Founded in 2008 by Ingo Heinrich, Michael Vietze, and Mathias Ziegler, stylefruits GmbH currently employs an international team of around 80 coworkers with operations in Germany, the UK, France, and the Netherlands. </p>
+      </div>
+    </div>
   </div>
 </div>
