--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@ layout: default
     <img src="/assets/images/lambda_logo_white.png" />
     <p>2-day intensive Clojure Crash Course</p>
     <p class="small">12-13 October, Munich, Germany</p>
+    <p class="small">9:00 Kickoff</p>
     <p>
-      <a class='btn btn-primary btn-large' href='http://www.meetup.com/Munich-Lambda/events/129479772/'>Register</a>
+      <a class='btn btn-primary btn-large' href='http://www.meetup.com/Munich-Lambda/events/129479772/'>Event Page</a>
+      <a class='btn btn-primary btn-large' href="https://www.google.de/maps?q=Combinat+56+GmbH&ie=UTF8&ll=48.163552,11.558261&spn=0.0153,0.032938&t=m&hq=Combinat+56+GmbH&hnear=M%C3%BCnchen,+Oberbayern,+Bayern&z=16&iwloc=A">Google Maps</a>
     </p>
 
     <ul class="masthead-links">
@@ -53,7 +55,7 @@ layout: default
       <div class="span4 centered">
         <h2>Sponsors</h2>
         <a href="https://codecentric.de/"><img class="sponsor-logo" src="/assets/images/codecentric.png" /></a>
-        <a href="https://stylefruits.de/"><img class="sponsor-logo" src="/assets/images/stylefruits.png" style="width: 270px;"/></a>
+        <a href="http://www.stylefruits.de/"><img class="sponsor-logo" src="/assets/images/stylefruits.png" style="width: 270px;"/></a>
         <a href="https://soundcloud.com/"><img class="sponsor-logo" src="/assets/images/soundcloud.png" /></a>
         <a href="https://github.com/"><img class="sponsor-logo" src="/assets/images/github.png" /></a>
         <a href="http://pragprog.com/"><img class="sponsor-logo" src="/assets/images/pragprog.png" /></a>
