Preparing for Functional Institute

--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 ---
-title: Clojure Workshops and Trainings, 12-13 December, Dusseldorf.
+title: Clojure Workshops and Trainings.
 layout: default
 ---
-<main class="bs-masthead" id="content" role="main" style="background: url(/assets/images/bg.jpg) center -300px no-repeat, #000; color: #fff !important; height: 600px; padding-top: 50px !important; padding-bottom: 50px !important;">
+<main class="bs-masthead" id="content" role="main" style="background: url(/assets/images/bg.jpg) center -300px no-repeat, #000; color: #fff !important; height: 450px; padding-top: 50px !important; padding-bottom: 50px !important;">
   <div class="container">
     <center>
-      <h2>Clojure Workshop</h2>
+      <h2>Functional Institute</h2>
       <img src="/assets/images/lambda_logo_white.png" />
-      <p class="lead" style="margin-right: 0;">An affordable 2-day intensive Clojure Training</p>
-      <h3>Munich, Berlin, Dusseldorf and more..</h3>
-      <p>
-        <a class='btn btn-primary btn-lg' href='https://www.codecentric.de/schulungen-und-workshops/clojurecrashcourse/'>Düsseldorf</a>
-        <a class='btn btn-primary btn-lg' href='/articles/munich_2013_october_workshop.html'>München</a>
-      </p>
+      <p class="lead" style="margin-right: 0;">A year-long trip to become a Functional Programmer</p>
 
       <ul class="bs-masthead-links" style="text-align: center;">
         <li>
@@ -39,20 +34,45 @@ layout: default
   <div class="marketing">
     <div class="row">
       <div class="col-lg-4">
-        <h2>Core Concepts</h2>
-        <p>Staring with basics of Clojure, we'll be building a solid foundation for you as a Clojure developer. You'll learn everything required to get you up and running with Clojure.</p>
+        <h2>Bi-weekly Hangouts</h2>
+        <img src="/assets/images/pip-boy/wrench.png" class="pull-left"/>
+        <p style="margin-left: 100px;">Weekly hangouts on tooling and infrastructure, to learn what's new in FP World.</p>
       </div>
 
       <div class="col-lg-4">
-        <h2>Interactive</h2>
-        <p>Bring your laptop, download our pre-configured, ultra-interactive environment that runs inside of the Virtual Machine that works on all the hosts systems. Program Clojure as if it was your native language.</p>
+        <h2>Homework</h2>
+        <img src="/assets/images/pip-boy/homework.png" class="pull-left"/>
+        <p style="margin-left: 100px;">Everyone needs some hands-on experience. We'll support your work on your personal projects in FP languages.</p>
       </div>
 
       <div class="col-lg-4">
-        <h2>Real-life examples</h2>
-        <p>Our coaches have have worked with Clojure for years, and have plently of production and open-source experience. They'll share their experiences with language. Get your questions prepared, they'll be able to answer all of them!</p>
+        <h2>Experimentation</h2>
+        <img src="/assets/images/pip-boy/sciense.png" class="pull-left"/>
+        <p style="margin-left: 100px;">The best way to learn is to experiment. Take one of the tasks we prepared and implement it the way you think it's best.</p>
+      </div>
+
+      <div class="col-lg-4">
+        <h2>Build a skill</h2>
+        <img src="/assets/images/pip-boy/ninja.png" class="pull-left"/>
+        <p style="margin-left: 100px;">From simple to complex, build your skill and expertise. Check out the material, compare your work with your peer's work.</p>
+      </div>
+
+      <div class="col-lg-4">
+        <h2>Tooling</h2>
+        <img src="/assets/images/pip-boy/armory.png" class="pull-left"/>
+        <p style="margin-left: 100px;">Use the best tools, that allow you to accomplish what you want with the least effort, in the most elegant way.</p>
+      </div>
+
+      <div class="col-lg-4">
+        <h2>Expertise</h2>
+        <img src="/assets/images/pip-boy/strength.png" class="pull-left"/>
+        <p style="margin-left: 100px;">Gradually grow your skill strong, to be able to use an FP language in a professional context, not only for small projects.</p>
       </div>
     </div>
+
+    <br />
+    <br />
+    <br />
 
     <div class="row">
       <div class="col-lg-4 centered">
@@ -62,103 +82,40 @@ layout: default
         <br />
         Want to become a sponsor? Ping us at <a href="mailto:sponsors@clojureworkshop.com">sponsors@clojureworkshop.com</a>
       </div>
-      <div class="col-lg-8">
-        <h2>Speakers/Coaches (Munich Edition)</h2>
 
-        <div class="media">
-          <a class="pull-left" href="#">
-            <img class="media-object" src="http://www.gravatar.com/avatar/c1a634a6db1049a4b98b365f63a5fd97?s=60">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">Alex Petrov</h4>
-            Zefops, gymops. Clojure / Ruby / C hacker. @ClojureWerkz core team working @CodeCentric.
-            Data analysis & visualization nerd.
-          </div>
-        </div>
-
-        <div class="media">
-          <a class="pull-left" href="#">
-            <img class="media-object" src="https://secure.gravatar.com/avatar/4cada4bd1c57dd6a3e69acc46833d55b?s=60">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">Maximilian Karasz</h4>
-            Bioinformatician. Backend-Engineer @ stylefruits.
-            Madly in love with code, data, and their interactions.
-          </div>
-        </div>
-
-        <div class="media">
-          <a class="pull-left" href="#">
-            <img class="media-object" src="https://secure.gravatar.com/avatar/7f024866857f3d6511fb505e6ac174d8?s=60">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">Thiago Nunes</h4>
-            Functional aficionado, working with Clojure @soundcloud. Unraveling the mysteries of the functional
-            world with Clojure and Haskell. In love with concurrency and scalability.
-          </div>
-        </div>
-
-
-        <div class="media">
-          <a class="pull-left" href="#">
-            <img class="media-object" src="https://secure.gravatar.com/avatar/8666f7a05688031004c8c0bc7e0dcef7?s=60">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">Jan Stępień</h4>
-            Alumnus of Warsaw University of Technology. Developer at stylefruits
-            GmbH. When in front of the keyboard he's most probably juggling with
-            bits of Clojure, Ruby or Haskell. When offline, he can be found
-            outdoors; either preparing for the next marathon or wandering with a way
-            too big backpack somewhere in the Alpine or Carpathian wilderness.
-          </div>
-        </div>
-
-        <div class="media">
-          <a class="pull-left" href="#">
-            <img class="media-object" src="https://secure.gravatar.com/avatar/a897b36b388796219fe140ad31101ce9.png ?s=60">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">Marek Kubica</h4>
-            Programming language wanderer, functional programming proponent,
-            addicted to free software. Purveyor of fine rants. Uses computers and
-            wears hats.
-          </div>
-        </div>
-
-
-      </div>
-    </div>
-
-
-    <div class="row">
-      <div class="col-lg-4"></div>
       <div class="col-lg-8" id="topics">
-        <h2>Topics</h2>
-        <dl>
-          <dt>Clojure Toolchain</dt>
-          <dd>Set up everything that you need to start working with Clojure: text editor, JVM, <a href="http://leiningen.org/">Leiningen</a>, learn about Clojure infrastructure, Clojars, Maven repositories, use your favorite Java tools together with Clojure.</dd>
+        <h2>How Does It Work?</h2>
+        <p>
+          It's quite simple: if you want to use Clojure in your day-to-day work, we can help you. Although
+          learning is a complex process, that requires more effort from the party that learns.
+        </p>
 
-          <dt>Clojure Basics</dt>
-          <dd>Start with a simple Clojure program, try things out in REPL, learn about Clojure syntax, language constructs and most important expressions.</dd>
+        <p>
+          Throughout a year, we'll establish Bi-weekly Google Hangouts anyone can participate, and some local
+          meetups in Munich, where we'll be moving from the most basic Functional Programming idioms to more ana
+          more complex things. You're not required to be in Munich to participate. We'll do our best to make
+          all material available for remote participants.
+        </p>
 
-          <dt>Functional Programming</dt>
-          <dd>Higher-order functions, function composition, recursion, closures, lexical scope, currying, lazy evaluation. Thinking in verbs instead of nouns.</dd>
+        <h2>Why a Year?</h2>
+        <p>
+          From what we've seen so far, thematic meetups are great for supporting an existing knowledge and giving
+          a quick overview for a topic. Although it's hard to build a solid foundation without asking people to
+          make a long-term commitment.
+        </p>
+        <p>
+          Year is a good timespan for learning something new, especially if you have a lot going on. Having some
+          people enthusiastic about the same subject will help you to get moving quicker, since there's always
+          someone to answer questions and discuss things with.
+        </p>
 
-          <dt>Java interop and Clojure data concepts</dt>
-          <dd>Types, Records, Protocols, calling Java from Clojure, using REPL to experiment with Java code.</dd>
+        <h2>How can I participate?</h2>
+        <p>
+          We're finalising a course at the moment, and will publish a program here. If you think you're
+          interested, just drop a line to <a href="mailto:alex@clojurewerkz.org">Alex</a>. We'll get in touch
+          with you as soon as we launch the program.
+        </p>
 
-          <dt>Building Blocks</dt>
-          <dd>Polymorphism in Clojure, using metadata, writing macros, common patterns.</dd>
-
-          <dt>Clojure and Concurrency</dt>
-          <dd>Writing concurrent programs with Clojure, using Software Transactional Memory.</dd>
-
-          <dt>Clojure Libraries</dt>
-          <dd>Great things that exist in Clojure, libraries for building web application, working with databases, processing data, building distributed systems and more.</dd>
-
-          <dt>Real-world Clojure examples</dt>
-          <dd>Experiences of building large applications with Clojure, stories and advices from people who use Clojure in production.</dd>
-        </dl>
       </div>
     </div>
   </div>
