Add a semester clause

--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@ layout: default
           people enthusiastic about the same subject will help you to get moving quicker, since there's always
           someone to answer questions and discuss things with.
         </p>
+        <p>
+          A year will be broken to 8-week semesters (rougly 2 months) with 1 month break between semesters.
+          This will let you schedule things accordingly, and catch up on things you couldn't find a time for
+          during the study period. This idea was taken from Coursera courses, and seems to work very well for
+          long-time learning.
+        </p>
 
         <h2>How can I participate?</h2>
         <p>
