Add Languages clause.

--- a/index.html
+++ b/index.html
@@ -97,12 +97,24 @@ layout: default
           all material available for remote participants.
         </p>
 
-        <h2>Why a Year?</h2>
+        <h2>Which Languages are Going to be Covered?</h2>
         <p>
-          From what we've seen so far, thematic meetups are great for supporting an existing knowledge and giving
-          a quick overview for a topic. Although it's hard to build a solid foundation without asking people to
-          make a long-term commitment.
+          We'll be going through Clojure and Haskell. Primary goal is to let you become a professional Clojure
+          programmer, but since Haskell is an awesome language and is fun to learn and play with, we're going
+          to be covering Haskell as well.
         </p>
+        <p>
+          Clojure is easy to learn and has an amazing tooling, which suits pretty much any task: front-end, web,
+          backend development, data processing and manipulation.
+        </p>
+        <p>
+          On the other hand, Haskell is a Pure Functional Programming language, and has many concepts, such as
+          Purity, Laziness, Pattern Matching, Partial Function Evaluation and more, which are kind of underrepresented
+          in other languages, even though they're available. It's just so much easier to learn those through Haskell,
+          and start using same concepts elsewhere.
+        </p>
+
+        <h2>Why a Year?</h2>
         <p>
           Year is a good timespan for learning something new, especially if you have a lot going on. Having some
           people enthusiastic about the same subject will help you to get moving quicker, since there's always
