Remove reg email

--- a/index.html
+++ b/index.html
@@ -129,9 +129,7 @@ layout: default
 
         <h2>How can I participate?</h2>
         <p>
-          We're finalising a course at the moment, and will publish a program here. If you think you're
-          interested, just drop a line to <a href="mailto:alex@clojurewerkz.org">Alex</a>. We'll get in touch
-          with you as soon as we launch the program.
+          We're finalising the course at the moment, and will publish a program here.
         </p>
 
       </div>
